[package]
name = "rs_sip"
version = "0.1.0"
edition = "2024"


[dependencies]
# Async runtime
tokio = { version = "1.45", features = ["full"] }

# Required for trait variants
trait-variant = "0.1"

# For lazy static initialization in examples
once_cell = "1.19"

# Optional dependencies for enhanced features
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

chrono = "0.4"

[dev-dependencies]
# For testing
tokio-test = "0.4"
criterion = "0.5"

[features]
default = []
serialization = ["serde", "serde_json"]
full = ["serialization"]



[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[profile.dev]
opt-level = 0
debug = true
